--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "webpack": "^5.37.1",
     "webpack-cli": "^4.7.0",
     "html-webpack-plugin": "^5.3.1",
+    "ts-loader": "^9.2.2",
     "typescript": "^4.2.4",
     "webpack-dev-server": "^3.11.2"
   }
